web: fixed page overflows

--- a/www/tutorbot-app/src/components/active-tutorings/ActiveTutorings.module.css
+++ b/www/tutorbot-app/src/components/active-tutorings/ActiveTutorings.module.css
@@ -5,7 +5,6 @@
   max-width: max-content;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .myModal {
