--- a/www/tutorbot-app/src/components/tutorManagement/TutorManagement.module.css
+++ b/www/tutorbot-app/src/components/tutorManagement/TutorManagement.module.css
@@ -5,7 +5,6 @@
   margin-right: auto;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .newTutorForm {
